--- a/app/views/paginate/Controls.html
+++ b/app/views/paginate/Controls.html
@@ -21,8 +21,8 @@ String __prevURL = __hasPrev ? _items.getCallbackURL(__currentPage-1) : "#";
 String __nextURL = __hasNext ? _items.getCallbackURL(__currentPage+1) : "#";
 String __lastURL = __hasNext ? _items.getCallbackURL(__maxPage) : "#";
 %}
-<div class="pagination-container">
-	<ul class="pagination">
+<div class="pagination pagination-right">
+	<ul>
 %{ if (_items.boundaryControlsEnabled) { %}	
 		<li class="${__currentPage == 1 ? 'off' : 'first'}"><a href="${__firstURL}">&{'play-paginate.first'}</a></li>
 %{ } %}
@@ -31,7 +31,7 @@ String __lastURL = __hasNext ? _items.getCallbackURL(__maxPage) : "#";
 for (__idx = __firstPage; __idx <= __lastPage; __idx++) {
 boolean __active = __currentPage == __idx;
 %}
-		<li><a class="${__active ? 'active' : 'inactive'}" href="${_items.getCallbackURL(__idx)}">${__idx}</a></li>
+		<li class="${__active ? 'active' : 'inactive'}"><a href="${_items.getCallbackURL(__idx)}">${__idx}</a></li>
 %{
 }
 %}
@@ -41,4 +41,3 @@ boolean __active = __currentPage == __idx;
 %{ } %}
 	</ul>
 </div>
-<br style="clear:both;"/>
